--- a/day1exercises/pom.xml
+++ b/day1exercises/pom.xml
@@ -3,7 +3,16 @@
   <groupId>com.boa</groupId>
   <artifactId>day1exercises</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.20</version>
+    <scope>provided</scope>
+</dependency>
   
+  </dependencies>
   <build>   
     <plugins>
       <plugin>
