--- a/day1exercises/pom.xml
+++ b/day1exercises/pom.xml
@@ -11,6 +11,13 @@
     <version>1.18.20</version>
     <scope>provided</scope>
 </dependency>
+  <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+    <version>1.2.5</version>
+    
+</dependency>
   
   </dependencies>
   <build>   
